application-basique/application-basique-todo/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cd-formation-secu
spec:
  selector:
    app: cd-formation-secu
  ports:
  - port: 80
    targetPort: 8080
